@@ -51,10 +51,10 @@ module BinData
     register(self.name, self)
 
     # These are the parameters used by this class.
-    optional_parameters  :read_length, :length, :trim_value
-    default_parameters   :pad_char => "\0"
-    mutually_exclusive_parameters :read_length, :length
-    mutually_exclusive_parameters :length, :value
+    bindata_optional_parameters :read_length, :length, :trim_value
+    bindata_default_parameters  :pad_char => "\0"
+    bindata_mutually_exclusive_parameters :read_length, :length
+    bindata_mutually_exclusive_parameters :length, :value
 
     class << self
 
