@@ -7,6 +7,7 @@
   of Peter Suschlik).
 * Added 128 bit integers.
 * Significant memory usage reduction.
+* Added custom mandatory and default parameters for user defined MultiValues.
 
 == Version 0.9.2 (2008-07-18)
 
